Styling bill list item as per design. Fixing spacing.

--- a/web-app/src/components/BillPaymentItem/BillPaymentItem.css
+++ b/web-app/src/components/BillPaymentItem/BillPaymentItem.css
@@ -4,9 +4,10 @@
     border-bottom: 1px solid var(--payment-tracker-light-grey);
     color: var(--payment-tracker-dark-grey);
     margin: var(--payment-tracker-sizing-unit);
+    height: calc(var(--payment-tracker-sizing-unit) * 10);
     margin-bottom: 0;
     text-decoration: none;
-    align-content: space-around
+    justify-content: space-between;
 }
 
 .bill-payment-item__name-and-price-container {
@@ -24,4 +25,5 @@
     justify-content: space-between;
     font-size: 12pt;
     color: var(--payment-tracker-light-grey);
+    margin-bottom: calc(var(--payment-tracker-sizing-unit) * 0.5);
 }
